fixing scrollbar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   text-align: center;
   margin-top: 3rem;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .questContainer {
